@@ -1,4 +1,5 @@
 HEAD
+    + Do not destroy scenario when a critical test fails using -wait-fail
     + files in images can be directories whose content is put in the image
       target directory
     + Fix install instructions using new repository
